# watcher

./: .gitignore  LICENSE  PROJECT_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt
watcher/: build_release.py  cli.py  collector.py  debug_inspector_repro.py  inspector.py  local_tracker.py  reporter.py  schema.py  test_watcher.py  tracer.py  tui.py  watcher_service.py
